<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Remote Controller</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_input">Touchpad &amp; Keyboard</string>
    <string name="title_activity_dashboard">Android Remote Controller</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scan">Servers</string>
    <string name="title_activity_vlc">VLC Media Player</string>
    <string name="title_activity_presentation">Presentation</string>
    <string name="alertDialog">Enter slide number : </string>
    <string name="title_activity_remotes_list">Remotes</string>
    <string name="title_activity_power_states">Power States</string>
    <string name="back_button_description">Step back</string>
    <string name="parent_button_description">goto parent directory</string>
    <string name="home_button_description">Step back</string>
    <string name="close_button_description">Step back</string>
    <string name="file_icon_description">Item icon</string>
    <string name="title_activity_file_browser">File Browser</string>
    <string name="wifi">WIFI</string>
    <string name="bluetooth">BLUETOOTH</string>
    <string name="remotes">REMOTES</string>
    <string name="exit">EXIT</string>
    <string name="shutdown">Shut Down</string>
    <string name="restart">Restart</string>
    <string name="logoff">Log Off</string>
    <string name="hibernate">Hibernate</string>
    <string name="lock">Lock</string>
    <string name="sleep">Sleep</string>
    <string name="scan">Scan Network for Server</string>
    <string name="empty"/>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="go_to_slide">Go to Slide</string>
    <string name="start_ss">Start Slide Show</string>
    <string name="finish_ss">Finish Slide Show </string>
    <string name="mute">Mute</string>
    <string name="play_pause">Play and Pause</string>
    <string name="fullscreen">Full Screen</string>
    <string name="stop">Stop</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Forward</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="connect">Connect</string>
    <string name="wifi_popup_desc">You can scan network for server or enter IP address of the server manually.</string>
    <string name="enter_ip">Enter IP address:</string>
    <string name="ip_eg">e.g. 192.168.1.2</string>
    <string name="not_connected_toast">You are not connected to any server!</string>
    <string name="connected_toast">Connected to server...</string>
    <string name="conn_failed_toast">Connection failed!</string>
    <string name="bltth_toast">Bluetooth is not supported on your device!</string>
    <string name="scan_failed_toast">Server scan failed!</string>

</resources>