<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/dashboard_bt"
            android:contentDescription="@string/parent_button_description"
            android:src="@drawable/back" />

        <ImageButton
            android:id="@+id/parentDirectory_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/back_button"
            android:background="@drawable/dashboard_bt"
            android:contentDescription="@string/parent_button_description"
            android:src="@drawable/parent_dir" />

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/parentDirectory_button"
            android:background="@drawable/dashboard_bt"
            android:contentDescription="@string/home_button_description"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/home_button"
            android:background="@drawable/dashboard_bt"
            android:contentDescription="@string/close_button_description"
            android:src="@drawable/close" />
    </RelativeLayout>

    <View
        android:id="@+id/hl1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/buttons"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hl1"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/empty"
        android:textSize="16sp"
        android:textStyle="normal" />

    <View
        android:id="@+id/hl2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/path"
        android:background="@android:color/darker_gray" />

    <ViewSwitcher
        android:id="@+id/view_switcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/hl2" >

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </ViewSwitcher>

</RelativeLayout>